--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,31 @@
     <title>10_Tag_Lev1_2_css-vertiefung_media-queries</title>
     <link rel="stylesheet" href="./assets/style.css">
 </head>
+
 <body>
-    
+    <header>
+
+    </header>
+    <!-- ++++++++++++++++++++ main ++++++++++++++++++++ -->
+
+    <main>
+        <aside>
+        </aside>
+        <section>
+            <article>            </article>
+            <article>            </article>
+            <article>            </article>
+            <article>            </article>
+        </section>
+
+
+
+    </main>
+
+    <!-- ++++++++++++++++++++ footer +++++++++++++++++++++++ -->
+    <footer>
+
+    </footer>
 </body>
+
 </html>
