--- a/index.html
+++ b/index.html
@@ -11,26 +11,27 @@
 
 <body>
     <header>
-
+        he
     </header>
     <!-- ++++++++++++++++++++ main ++++++++++++++++++++ -->
 
     <main>
-        <aside>
-        </aside>
         <section>
-            <article>            </article>
-            <article>            </article>
-            <article>            </article>
-            <article>            </article>
+            <aside>aside
+            </aside>
+            <section>
+                <article> a1 </article>
+                <article> a2 </article>
+                <article> a3 </article>
+                <article> a4 </article>
+            </section>
         </section>
-
 
 
     </main>
 
     <!-- ++++++++++++++++++++ footer +++++++++++++++++++++++ -->
-    <footer>
+    <footer>fo
 
     </footer>
 </body>
